--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "google-auth-library": "^8.7.0",
     "http": "^0.0.1-security",
+    "infinite-react-carousel": "^1.2.11",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
